Add small bridges and fix small bugs
