# app/Http/Controllers/LocationItemController.php
@@ -2,7 +2,7 @@
 
 namespace App\Http\Controllers;
 
-use App\Models\Customer;
+use App\Models\Location;
 use Illuminate\Http\Request;
 
 class LocationItemController extends Controller
@@ -12,10 +12,54 @@ class LocationItemController extends Controller
      *
      * @return \Illuminate\Http\Response
      *
+     * @OA\Get(
+     *      path="/api/locations/{locationId}/items",
+     *      operationId="LocationItemController.index",
+     *      tags={"Locations"},
+     *      summary="Get list of items in location",
+     *      description="Returns list of items in location",
+     *      @OA\Parameter(
+     *          name="locationId",
+     *          description="Location Id",
+     *          required=true,
+     *          in="path",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="page",
+     *          description="Page number",
+     *          required=false,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer",
+     *              default=1
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation",
+     *          @OA\MediaType(
+     *              mediaType="application/json",
+     *          ),
+     *       ),
+     *       @OA\Response(
+     *          response=400,
+     *          description="Bad request"
+     *       ),
+     *       @OA\Response(
+     *          response=404,
+     *          description="Resource Not Found"
+     *       ),
+     *       security={
+     *           {"api_key_security_example": {}}
+     *       }
+     *     )
      */
-    public function index()
+    public function index(Location $location)
     {
-        //
+        return Response($location->items()->paginate(500));
     }
 
     /**
